# ru-fin-monitoring-helper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  package.json  pyproject.toml
.github/workflows/: ci.yml  security.yml
ai/: pyproject.toml
ai/src/ru_fin_ai_helper/: __init__.py  base_ai_provider.py  cli.py  event_minimum_set_suggester.py  noop_ai_provider.py  playbook_suggester.py  product_profile.py  types.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  generate_pipeline_stub.py  generate_playbooks.py  suggest_events.py  validate_schema.py
dashboards/grafana/: finmon_aml_alerts.json  finmon_crypto_risk.json  finmon_operations_sla.json  finmon_overview.json
examples/elk/: docker-compose.elk-example.yml
examples/logs/: sample_auth.jsonl  sample_kyc.jsonl  sample_transactions.jsonl
examples/loki/: docker-compose.loki-example.yml
examples/playbooks/: aml_rule_template.md  soc_playbook_template.md
examples/products/: crypto_exchange_ru.yaml  p2p_wallet.yaml  simple_psp_ru.yaml
pipelines/elk/: filebeat_fintech_example.yml  logstash_finmon_pipeline.conf
pipelines/elk/opensearch_index_templates/: finmon_kyc.json  finmon_transactions.json
pipelines/loki/: promtail_config_fintech.yaml
sanctions/opensanctions_client/: pyproject.toml
sanctions/opensanctions_client/src/sanctions/: __init__.py
sanctions/opensanctions_client/src/sanctions/opensanctions_client/: __init__.py  cache.py  cli.py  client.py  config.py  models.py
sanctions/sanctions_network_client/: pyproject.toml
sanctions/sanctions_network_client/src/sanctions_network_client/: __init__.py  client.py
schemas/events/: auth_login.yaml  auth_mfa.yaml  case_management.yaml  kyc_lifecycle.yaml  sanctions_screening.yaml  transaction_aml_flags.yaml  transaction_core.yaml
schemas/pipelines/: elk_ingest_auth.yaml  elk_ingest_transactions.yaml  loki_labels_fi.yaml
schemas/reference/: readme.ru.md
scripts/: lint.sh  perf_check.sh  security_scan.sh
tests/: conftest.py
tests/integration/: test_end_to_end_elastic_pipeline.py  test_end_to_end_loki_pipeline.py  test_sanctions_opensanctions_flow.py
tests/unit/: test_ai_minimum_events.py  test_ai_playbook_suggestion.py  test_cli_suggest_events.py  test_cli_validate_schema.py  test_event_schemas_valid.py  test_sanctions_client_config.py  test_sanctions_client_parsing.py
