[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctions-network-client"
version = "0.1.0"
description = "Wrapper for sanctions.network API"
readme = "../../README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sanctions_network_client*"]
